@startuml DCL
skinparam class {
    BackgroundColor White
    BorderColor Black
    BorderThickness 1.5
    FontName Roboto
    FontSize 13
    ArrowThickness 2
}

package "labo2" {
    class App
}

package "labo2.command" {
    interface Command {
        +execute(): void
        +undo(): void
    }
    class TranslationCommand {
        +execute(): void
        +undo(): void
    }
    class ZoomCommand {
        +execute(): void
        +undo(): void
    }

    Command <|.. TranslationCommand
    Command <|.. ZoomCommand
}

package "labo2.controller" {
    class ImageController
    class FileUploadController
    class MainController
    class CommandController
}

package "labo2.model" {
    class ImageModel
    class TranslationModel
    class ZoomModel
}

package "labo2.observer" {
    interface Observable {
        +attach(observer: Observer): void
        +detach(observer: Observer): void
        +notifyObservers(): void
    }
    interface Observer {
        +update(): void
    }
}

package "labo2.singleton" {
    class CommandManager {
        +getInstance(): CommandManager
        +executeCommand(command: Command): void
        +undoCommand(): void
    }
}

App --> MainController

MainController --- ImageController
MainController --- CommandController
CommandController ..> Command
CommandController ..> CommandManager
CommandController ..> TranslationModel
CommandController ..> ZoomModel
ImageController ..> ImageModel
ImageController ..> Observable
ImageController --> Observer
FileUploadController --> ImageModel

ImageModel --> Observable
ImageModel --> TranslationModel
ImageModel --> ZoomModel

TranslationModel --> Observable
ZoomModel --> Observable

TranslationCommand --> TranslationModel
ZoomCommand --> ZoomModel
@enduml